  keep in mind there was quite a bit of churn caused by the various
  api changes in rustls.

  Updated to the last version of gtk-rs supporting gtk-3. From here,
  it's port the browser to 4 (a major undertaking), or rewrite it
  using something like iced. At this point I'm not sure what the right
  thing is, but whatever it is, it will be a lot of work.

* 0.27.2

- Fix a bug in subscriber that caused spurious empty batches to be
  delivered to an updates channel for subscriptions that aren't
  updating when other subscriptions not covered by that channel are
  updating. Could have had potentially serious performance
  implications in some applications due to lots of spurious
  wakeups.

- Add a recorder session client, for controlling recorders from rust
  with a nice interface.

- Add unit tests to netidx-archive covering logfile_collections and
  the full recorder stack using the new session client interface.

- Fix the tls publish test on windows

- Fix netidx-archive and the recorder on windows. Note, recorder
  archives written on windows must have their filenames translated
  before they will work on unix and likewise for unix to windows.

- Builder pattern for netidx client and server configs

- Builder pattern for recorder config

- Begin testing on aarch64 MacOS again. Pre release we now test on
  x86_64 windows, x86_64 linux, aarch64 linux, and aarch64 Mac OS.

* 0.27.0-0.27.1

- merge #14 refactor netidx-archive so that the origin can directly
  write to an archive collection(s) while exposing the recorder
  interface to netidx.

- update dependencies to more recent versions

* 0.26.0

- Fix a bug in write_with_recipt that could cause concurrent write
  results to be delivered to the wrong request

- This version changes the write protocol, however the change is
  backwards compatible. In order for the bug to be fixed however both
  sides must be running this version or above.

- Merge #10, allow symlinks to archive files

* 0.25.3
